--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,32 +1,40 @@
 <div class="flex">
   <app-sidebar></app-sidebar>
   <div class="flex-1">
-    <app-header [title]="title" [stats]="stats"></app-header>
+    <app-header [title]="title" [stats]="stats" (addJobClicked)="onAddJobClicked()"></app-header>
     
     <div class="p-6">
       <app-tabs (tabChanged)="onTabChange($event)"></app-tabs>
-      <app-filter-bar></app-filter-bar>
+      <app-filter-bar [jobs]="jobs" (filterChange)="onFilterChange($event)"></app-filter-bar>
 
       <!-- Column View (Default) -->
       <div *ngIf="activeTab === 'COLUMN_VIEW'" class="mt-6">
-        <app-column-view [jobs]="jobs"></app-column-view>
+        <app-column-view [jobs]="filteredJobs" (jobEdited)="onJobEdited($event)" (jobDeleted)="onJobDeleted($event)"></app-column-view>
       </div>
 
       <!-- List View -->
       <div *ngIf="activeTab === 'LIST_VIEW'" class="mt-6">
-        <app-list-view [jobs]="jobs"></app-list-view>
-      </div>
-
-      <!-- Sankey View -->
-      <div *ngIf="activeTab === 'SANKEY_VIEW'" class="mt-6">
-        <app-sankey-view [jobs]="jobs"></app-sankey-view>
+        <app-list-view [jobs]="filteredJobs" (jobEdited)="onJobEdited($event)" (jobDeleted)="onJobDeleted($event)"></app-list-view>
       </div>
 
       <!-- Data Management -->
       <div *ngIf="activeTab === 'DATA_MANAGEMENT'" class="mt-6">
-        <app-data-management [jobs]="jobs"></app-data-management>
+        <app-data-management 
+          [jobs]="filteredJobs"
+          (jobEdited)="onJobEdited($event)"
+          (jobDeleted)="onJobDeleted($event)">
+        </app-data-management>
       </div>
     </div>
   </div>
+
+  <!-- Job Form Modal -->
+  <app-job-form-modal
+    [isOpen]="isModalOpen"
+    [job]="selectedJob"
+    [isEditMode]="isEditMode"
+    (close)="onModalClose()"
+    (save)="onModalSave($event)">
+  </app-job-form-modal>
 </div>
 
