--- a/src/app/pages/messages/messages.html
+++ b/src/app/pages/messages/messages.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <app-sidebar></app-sidebar>
   <div class="flex-1">
-    <div class="bg-gradient-to-r from-cyan-600 to-cyan-800 text-white p-8">
+    <div class="bg-linear-to-r from-cyan-600 to-cyan-800 text-white p-8">
       <h1 class="text-4xl font-bold">Messages</h1>
       <p class="mt-2 text-cyan-100">Stay connected with recruiters</p>
     </div>
