--- a/src/app/components/list-view/list-view.html
+++ b/src/app/components/list-view/list-view.html
@@ -23,9 +23,12 @@
             {{ job.status }}
           </span>
         </td>
-        <td class="px-4 py-3">
-          <button class="text-gray-600 hover:text-gray-800">
-            <i class="bi bi-three-dots-vertical"></i>
+        <td class="px-4 py-3 flex gap-3">
+          <button (click)="editJob(job.id)" class="text-blue-600 hover:text-blue-800 text-lg" title="Edit">
+            <i class="bi bi-pencil-fill"></i>
+          </button>
+          <button (click)="deleteJob(job.id)" class="text-red-600 hover:text-red-800 text-lg" title="Delete">
+            <i class="bi bi-trash"></i>
           </button>
         </td>
       </tr>
